# understanding-muon

./: .gitignore  CLAUDE.md  Makefile  README.md  manim.cfg  pyproject.toml  reference_blog_post.md  render_and_concat.sh
.claude/: settings.local.json
.claude/agents/: manim-animation-creator.md
archived/: chapter_02_optimizers.py  chapter_02_optimizers_pt2.py
manim_docs/: API_DOCUMENTATION_SUMMARY.txt  DOCUMENTATION_INDEX.md  MANIM_API_DOCUMENTATION.md  MANIM_QUICK_REFERENCE.md
media/videos/chapter_01_intro/2160p60/partial_movie_files/MLTrainingProcess/: partial_movie_file_list.txt
media/videos/chapter_01_intro/480p15/partial_movie_files/MLTrainingProcess/: partial_movie_file_list.txt
media/videos/chapter_01_simple/480p15/partial_movie_files/SimpleNetwork/: partial_movie_file_list.txt
media/videos/ml_training_visualization/480p15/partial_movie_files/MLTrainingProcess/: partial_movie_file_list.txt
understanding_muon/: __init__.py
understanding_muon/viz/: chapter_01_intro.py  chapter_01_simple.py  chapter_02_optimizers.py  chapter_03_sgd_trapped.py  chapter_04_momentum_escape.py  chapter_05_muon_algorithm.py  muon_overview.py  muon_overview_clean_v2.py  util.py
